; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_xdk.c_frontend_xdk_exec.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_xdk.c_frontend_xdk_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_LAUNCH_DATA_SIZE = common dso_local global i32 0, align 4
@RARCH_PATH_CONTENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @frontend_xdk_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frontend_xdk_exec(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @verbosity_is_enabled()
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @verbosity_enable()
  br label %14

12:                                               ; preds = %2
  %13 = call i32 (...) @verbosity_disable()
  br label %14

14:                                               ; preds = %12, %10
  ret void
}

declare dso_local i32 @verbosity_is_enabled(...) #1

declare dso_local i32 @verbosity_enable(...) #1

declare dso_local i32 @verbosity_disable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
